syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";
option java_outer_classname = "SmartHome";

import "alice/library/censor/protos/extension.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TSmartHomeInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TPayload {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        message TProperty {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Type = 1 [json_name = "type", (NYT.column_name) = "type"];
            string Instance = 2 [json_name = "instance", (NYT.column_name) = "instance"];
            repeated string InstanceNames = 3 [json_name = "instance_names", (NYT.column_name) = "instance_names"];
        };

        message TCapability {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            message TMode {
                option (NYT.default_field_flags) = SERIALIZATION_YT;

                string Value = 1 [json_name = "value", (NYT.column_name) = "value"];
                repeated string Names = 2 [json_name = "names", (NYT.column_name) = "names"];
            };

            message TCustomButtonCapabilityParameters {
                option (NYT.default_field_flags) = SERIALIZATION_YT;

                string Instance = 2 [json_name = "instance", (NYT.column_name) = "instance"];
                repeated string InstanceNames = 4 [json_name = "instance_names", (NYT.column_name) = "instance_names"];
            };

            string Type = 1 [json_name = "type", (NYT.column_name) = "type"];
            string Instance = 2 [json_name = "instance", (NYT.column_name) = "instance"];
            repeated string InstanceNames = 4 [json_name = "instance_names", (NYT.column_name) = "instance_names"];
            repeated TMode Modes = 5 [json_name = "modes", (NYT.column_name) = "modes"];
            repeated string Values = 3 [json_name = "values", (NYT.column_name) = "values"];
            TCustomButtonCapabilityParameters Parameters = 6 [json_name = "parameters", (NYT.column_name) = "parameters"];
        };

        message TItem {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
        };

        message TNamedItem {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
            string Name = 2 [json_name = "name", (NYT.column_name) = "name", (FieldAccess) = A_PRIVATE_REQUEST];
        };

        message TDeviceLikeItem {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
            string Name = 2 [json_name = "name", (NYT.column_name) = "name", (FieldAccess) = A_PRIVATE_REQUEST];
            string Type = 3 [json_name = "type", (NYT.column_name) = "type"];
            repeated string Aliases = 4 [json_name = "aliases", (NYT.column_name) = "aliases"];
        };

        message TDevice {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            message TQuasarInfo {
                option (NYT.default_field_flags) = SERIALIZATION_YT;

                string DeviceId = 1 [json_name = "device_id", (NYT.column_name) = "device_id"];
                string Platform = 2 [json_name = "platform", (NYT.column_name) = "platform"];
            };

            string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
            string Name = 2 [json_name = "name", (NYT.column_name) = "name", (FieldAccess) = A_PRIVATE_REQUEST];
            string Type = 3 [json_name = "type", (NYT.column_name) = "type"];
            repeated TCapability Capabilities = 5 [json_name = "capabilities", (NYT.column_name) = "capabilities"];
            repeated TItem Groups = 6 [json_name = "groups", (NYT.column_name) = "groups"];
            string RoomId = 4 [json_name = "room_id", (NYT.column_name) = "room_id"];
            TQuasarInfo QuasarInfo = 7 [json_name = "quasar_info", (NYT.column_name) = "quasar_info"];
            repeated TProperty Properties = 8 [json_name = "properties", (NYT.column_name) = "properties"];
            repeated string Aliases = 9 [json_name = "aliases", (NYT.column_name) = "aliases"];
            double Created = 10 [json_name = "created", (NYT.column_name) = "created"];
            string HouseholdId = 11 [json_name = "household_id", (NYT.column_name) = "household_id"];
        };

        message TScenario {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            message TTrigger {
                option (NYT.default_field_flags) = SERIALIZATION_YT;

                string Type = 1 [json_name = "type", (NYT.column_name) = "type"];
                string Value = 2 [json_name = "value", (NYT.column_name) = "value"];
            };

            string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
            string Name = 2 [json_name = "name", (NYT.column_name) = "name"];

            repeated TTrigger Triggers = 3 [json_name = "triggers", (NYT.column_name) = "triggers"];
        };

        reserved 1;
        repeated TDeviceLikeItem Groups = 7 [json_name = "groups", (NYT.column_name) = "groups"];
        repeated TScenario Scenarios = 2 [json_name = "scenarios", (NYT.column_name) = "scenarios"];
        repeated TNamedItem Rooms = 3 [json_name = "rooms", (NYT.column_name) = "rooms"];
        repeated TNamedItem Colors = 4 [json_name = "colors", (NYT.column_name) = "colors"];
        repeated TDevice Devices = 5 [json_name = "devices", (NYT.column_name) = "devices"];
        repeated TCapability Capabilities = 6 [json_name = "capabilities", (NYT.column_name) = "capabilities"];
        repeated TNamedItem Households = 8 [json_name = "households", (NYT.column_name) = "households"];
    };

    TPayload Payload = 1 [json_name = "payload", (NYT.column_name) = "payload"];
};
